infra/K8S/mongo-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: mongo
spec:
   selector:
     matchLabels:
       app: mongo
   template:
     metadata:
       labels:
         app: mongo
     spec:
       containers:
       - name: mongo
         image: mongo
         ports:
         - containerPort: 27017
         volumeMounts: 
         - mountPath: /data/db
           name: mongodata
       volumes:
         - name: mongodata
           persistentVolumeClaim:
             claimName: mongo-claim
---
apiVersion: v1
kind: Service
metadata:
   name: mongo-clusterip
spec:
   type: ClusterIP
   selector:
     app: mongo
   ports:
   - port: 27017
     targetPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-np
spec:
  type: NodePort
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
    nodePort: 30003
