infra/K8S/postgres-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: postgres
spec:
   selector:
     matchLabels:
       app: postgres
   template:
     metadata:
       labels:
         app: postgres
     spec:
       containers:
       - name: postgres
         image: postgres
         ports:
         - containerPort: 5432
         volumeMounts: 
         - mountPath: /var/data/postgres
           name: postgresdata
       volumes:
         - name: postgresdata
           persistentVolumeClaim:
             claimName: postgres-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-clusterip
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-np
spec:
  type: NodePort
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
    nodePort: 30001
